Fixed spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,7 +49,7 @@ html {
   -moz-box-sizing: inherit;
   box-sizing: inherit;
   margin:0em;
-  padding:0em;
+  padding: 0em 0.5em;
 }
 
 body{
